# api/docs/swagger.json
@@ -26,13 +26,13 @@
                         "type": "string",
                         "description": "Number of meals to fetch",
                         "name": "limit",
-                        "in": "path"
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "Number of meals to omit",
                         "name": "offset",
-                        "in": "path"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -158,7 +158,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/menu.MealInfo"
+                            "$ref": "#/definitions/menu.MealDetails"
                         }
                     }
                 ],
@@ -373,13 +373,13 @@
                         "type": "string",
                         "description": "Number of reservations to fetch",
                         "name": "limit",
-                        "in": "path"
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "Number of reservations to omit",
                         "name": "offset",
-                        "in": "path"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -505,7 +505,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/reservation.ReservationInfo"
+                            "$ref": "#/definitions/reservation.ReservationDetails"
                         }
                     }
                 ],
@@ -579,13 +579,13 @@
                         "type": "string",
                         "description": "Number of restaurants to fetch",
                         "name": "limit",
-                        "in": "path"
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "Number of restaurants to omit",
                         "name": "offset",
-                        "in": "path"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -711,7 +711,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/restaurant.RestaurantInfo"
+                            "$ref": "#/definitions/restaurant.RestaurantDetails"
                         }
                     }
                 ],
